--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "0.30.1"
 agp = "8.7.3"
 datastorePreferences = "1.1.3"
 koinAndroidxCompose = "4.0.2"
@@ -17,9 +18,11 @@ navigationCompose = "2.8.9"
 navigationRuntimeAndroid = "2.9.0"
 
 lifecycleRuntimeComposeAndroid = "2.8.7"
+osmdroidAndroid = "6.1.10"
 uiTextGoogleFonts = "1.8.1"
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
@@ -46,6 +49,7 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 #aggiunti
 androidx-lifecycle-runtime-compose-android = { group ="androidx.lifecycle", name = "lifecycle-runtime-compose-android", version.ref ="lifecycleRuntimeComposeAndroid" }
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+osmdroid-android = { module = "org.osmdroid:osmdroid-android", version.ref = "osmdroidAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
